Corrige posição dos botões de compartilhamento da notícia

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -418,7 +418,8 @@ dd.image-caption {
   }
 }
 .portaltype-collective-nitf-content #viewlet-social-like {
-  margin: 0;
+  left: 50%;
+  margin-left: - $content-width / 2 !important;
 }
 
 /* colecao */
