Corrige inserção de viewlet de redes para permitir internacionalização

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -34,7 +34,8 @@ header#main-header {
     box-shadow: 0 8px 6px -6px #ccc;
 
 
-    h4 {
+    h3 {
+      font-size: 16px;
       margin-bottom: 20px;
     }
 
