Limita movimentação dos ícones de redes sociais para não invadir o rodapé do site

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -347,6 +347,10 @@ dd.image-caption {
     width: 73px;
     float: left;
   }
+  &.is-scrolling {
+    position: absolute;
+    bottom: 0;
+  }
   dl.image-right {
     margin-right: -10%;
   }
