--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -424,6 +424,16 @@ dd.image-caption {
 .portaltype-collective-nitf-content #viewlet-social-like {
   left: 50%;
   margin-left: - $content-width / 2 !important;
+  transform: translateY(245px);
+  &.is-scrolling {
+    transform: translateY(0);
+  }
+}
+.portaltype-document #viewlet-social-like {
+  transform: translateY(85px);
+  &.is-scrolling {
+    transform: translateY(0);
+  }
 }
 
 /* colecao */
