--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -226,9 +226,11 @@ dd.image-caption {
 #category {
   font-size: 100%;
   text-align: left;
-  padding-bottom: 20px;
   color: #fff;
   text-indent: -3000px;
+  padding: 8px 0 20px;
+  border: none;
+  width: auto;
 
   span {
     text-indent: initial;
@@ -252,6 +254,7 @@ dd.image-caption {
     width: 20%;
     float: right;
     text-align: right;
+    margin-bottom: 20px;
 
     a {
       color: #222;
@@ -282,6 +285,7 @@ dd.image-caption {
   border-top: solid 0.5px #ccc;
   border-bottom: solid 0.5px #ccc;
   padding: 20px 0;
+  clear: both;
 }
 
 
@@ -424,6 +428,16 @@ dd.image-caption {
 .portaltype-collective-nitf-content #viewlet-social-like {
   left: 50%;
   margin-left: - $content-width / 2 !important;
+  transform: translateY(245px);
+  &.is-scrolling {
+    transform: translateY(0);
+  }
+}
+.portaltype-document #viewlet-social-like {
+  transform: translateY(85px);
+  &.is-scrolling {
+    transform: translateY(0);
+  }
 }
 
 /* colecao */
