Corrige posicionamento do destaque topo

--- a/webpack/app/scss/_grid.scss
+++ b/webpack/app/scss/_grid.scss
@@ -97,6 +97,10 @@
   position: relative;
 }
 
+.portaltype-collective-cover-content #content {
+    position: initial;
+}
+
 #main {
   @extend .ct-width;
   display: flex;
