Tamanho das fontes do menu no responsivo

--- a/webpack/app/scss/_responsive.scss
+++ b/webpack/app/scss/_responsive.scss
@@ -56,9 +56,15 @@
     flex-direction: column;
     margin: 0 10px;
   }
-  #main-navigation .list-navigation li {
-    width: 100%;
-    border: none;
+  #main-navigation .list-navigation {
+    li {
+      width: 100%;
+      border: none;
+      font-size: 1.5rem;
+    }
+    ul.submenu li {
+      font-size: 1.2rem;
+    }
   }
   ul.submenu {
     top: 8px;
