Define a largura do video

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -463,6 +463,9 @@ header#main-header.busca-ativa {
   z-index: -2;
   object-fit: cover;
   overflow: hidden;
+  video {
+    width: 100%;
+  }
 }
 
 
