Usa API do youtube para controlar video no topo do liveblog

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -718,6 +718,14 @@ a#error-reporting-toggle.open::after {
     height: 680px;
     width: 100%;
   }
+  .linha-destaquetopo .play {
+    position: absolute;
+    cursor: pointer;
+    top: 50%;
+    right: 50%;
+    background: red;
+    padding: 20px;
+  }
   #spinner {
     text-align: right;
   }
