--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -135,6 +135,9 @@ p.nitfSubtitle {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
 }
+#content div.documentByLine {
+  font-size: 0.75rem;
+}
 #viewlet-social-like.vertical {
   float: left;
   position: absolute;
