--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -632,6 +632,9 @@ a#error-reporting-toggle.open::after {
 
 /* liveblog */
 .portaltype-liveblog {
+  .documentByLine {
+    border: none;
+  }
   #micro-updates {
     margin-bottom: 60px;
   }
@@ -657,7 +660,7 @@ a#error-reporting-toggle.open::after {
     color: #666;
   }
   .microupdate-byline time {
-    background: #f1f1f1;
+    background: #fff;
     padding: 1em 0;
     position: absolute;
     text-align: center;
@@ -679,12 +682,12 @@ a#error-reporting-toggle.open::after {
     content: "";
     background: #000;
     display: inline-block;
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     border-radius: 10px;
     position: absolute;
-    top: 25px;
-    left: -5px;
+    top: 20px;
+    left: -10px;
   }
   #micro-updates article:after {
     content: " ";
@@ -707,6 +710,11 @@ a#error-reporting-toggle.open::after {
     position: initial;
   }
   .linha-destaquetopo {
+
+  }
+  .linha-destaquetopo iframe {
+    height: 680px;
+    width: 100%;
     margin-bottom: -4px;
     position: absolute;
     top: 0;
@@ -714,14 +722,19 @@ a#error-reporting-toggle.open::after {
     right: 0;
     z-index: -1;
   }
-  .linha-destaquetopo iframe {
-    height: 680px;
-    width: 100%;
+  .linha-destaquetopo .play {
+    position: absolute;
+    cursor: pointer;
+    top: 45%;
+    right: 46%;
+    padding: 30px 50px;
+    z-index: 2;
+    text-indent: -500000px;
   }
   #spinner {
     text-align: right;
   }
   #portal-breadcrumbs.inverter {
-    margin-bottom: 425px;
+    margin-bottom: 480px;
   }
 }
