Corrige erros do responsivo

--- a/webpack/app/scss/_responsive.scss
+++ b/webpack/app/scss/_responsive.scss
@@ -37,6 +37,16 @@
 
     width: 100%;
   }
+  .expandable-header-template #logo {
+    width: 70%;
+  }
+  .expandable-header-template.section-pagina-inicial header #portal-searchbox {
+    left: 0;
+    right: 0;
+  }
+  .expandable-header-template #portal-searchbox form {
+      max-width: 90%;
+  }
   header#main-header {
     padding: 0 20px;
   }
@@ -104,6 +114,12 @@
   .template-view #content .tile-em-alta a {
     white-space: normal;
   }
+  .tile.box-branco h2 {
+    font-size: 1.25rem;
+  }
+  .tile.box-branco .tile-subtitle {
+    font-size: 0.6875rem !important;
+  }
   /*tamanho dos titulos */
   .tile h2 {
     font-size: 1.25rem;
@@ -118,6 +134,7 @@
       font-size: 1.5rem;
     }
   }
+
 
   .portaltype-collective-cover-content #content div.row.linha-destacada {
     margin-top: -1px;
