Ajustes no tamanho de fonte

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -133,7 +133,7 @@ p.nitfSubtitle {
   font-family: $main-font !important;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  text-align: center;
+  text-align: left;
 }
 #content div.documentByLine {
   font-size: 0.75rem;
@@ -740,6 +740,9 @@ a#error-reporting-toggle.open::after {
   #content .linha-destaquetopo .play:visited {
     border: none;
     outline: none;
+  }
+  .portaltype-collective-cover-content.template-view div.row.linha-destaquetopo p {
+    font-size: 0.875rem;
   }
   #spinner {
     text-align: right;
