--- a/webpack/app/scss/_responsive.scss
+++ b/webpack/app/scss/_responsive.scss
@@ -41,7 +41,7 @@
     width: 62%;
     margin: 0;
   }
-  #logo #portal-title, #logo h1 {
+  .expandable-header-template #logo #portal-title, .expandable-header-template #logo h1 {
     font-size: 1rem;
   }
   .expandable-header-template.section-pagina-inicial header #portal-searchbox {
