--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -108,8 +108,13 @@ p.tile-description {
     }
 }
 /* Texto rico */
-.cover-richtext-tile {
-    
+#content .cover-richtext-tile {
+    h2 {
+        font-size: 1.5rem;
+    }
+    p {
+        font-size: 1rem;
+    }
 }
 
 /* tile NITF basico sem estilo */
