Estilo do tile de carrossel

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -694,6 +694,10 @@ header.inverter .search-wrapper {
   border-bottom: 1px solid hsla(0,0%,100%,.2);
 }
 
+.brasil-groupcarousel-tile h2 {
+    font-size: 1.5rem !important;
+}
+
 /* linha de fundo do header */
 .portaltype-collective-cover-content.template-view div.row.fundo-topo-escuro, 
 .portaltype-collective-cover-content.template-view div.row.fundo-topo-claro {
