Ajustes visuais diversos (#247)
* Correige resultado da busca no responsivo

* Correção do topo expansível no responsivo

* Corrige posts do liveblog no responsivo

* Ajustes no tamanho de fonte

* Tamnaho da fonte do Paragrafo no topo

* Tamanho de fonte nos tiles texto rico

* Estilo do tile de carrossel

* Ajusta margem das colunas

* Corrige margem superior do assuntos em alta

* Altera changelog

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -133,7 +133,7 @@ p.nitfSubtitle {
   font-family: $main-font !important;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  text-align: center;
+  text-align: left;
 }
 #content div.documentByLine {
   font-size: 0.75rem;
