--- a/webpack/app/scss/_responsive.scss
+++ b/webpack/app/scss/_responsive.scss
@@ -38,7 +38,11 @@
     width: 100%;
   }
   .expandable-header-template #logo {
-    width: 70%;
+    width: 62%;
+    margin: 0;
+  }
+  .expandable-header-template #logo #portal-title, .expandable-header-template #logo h1 {
+    font-size: 1rem;
   }
   .expandable-header-template.section-pagina-inicial header #portal-searchbox {
     left: 0;
@@ -48,7 +52,7 @@
       max-width: 90%;
   }
   header#main-header {
-    padding: 0 20px;
+    padding: 0 12px;
   }
   .portaltype-document header.inverter,
   .portaltype-collective-nitf-content header.inverter {
@@ -287,6 +291,54 @@
   .portaltype-collective-nitf-content #content-core p, .portaltype-document #content-core p {
     padding: 0 20px;
     box-sizing: border-box;
+  }
+  /* busca */
+  #search-results-wrapper {
+    margin-left: 0 !important;
+  }
+  #search-results-bar {
+    width: 93%;
+    padding: 0;
+  }
+  .template-busca #content-core input[type=text] {
+    width: 80%;
+  }
+  .template-busca form .actionMenuHeader {
+    display: none;
+  }
+  #search-filter {
+    margin-left: 15px;
+  }
+  dl.searchResults {
+    padding: 10px;
+  }
+  /*liveblog */
+  .portaltype-liveblog #micro-updates article {
+    padding: 0;
+    margin-left: 0;
+    border-left: none;
+  }
+  .portaltype-liveblog .microupdate-byline p, .portaltype-liveblog .microupdate-text, 
+  .portaltype-liveblog .microupdate-title {
+    margin-left: 20px;
+  }
+  .portaltype-liveblog .microupdate-byline time {
+    position: relative;
+    top: 0;
+    width: auto;
+    left: 0;
+    display: inline;
+    background: transparent;
+  }
+  .portaltype-liveblog .microupdate-byline:after {
+    display: none;
+  }
+  .microupdate-byline p, .microupdate-date, .microupdate-time {
+    display: inline;
+    font-size: 0.8rem !important;
+  }
+  .portaltype-liveblog #micro-updates article:after {
+    margin: 30px 0 30px 20px;
   }
 }
 
