--- a/webpack/app/scss/_contrast.scss
+++ b/webpack/app/scss/_contrast.scss
@@ -198,4 +198,7 @@ body.folder_contraste {
   #portalredes-tumblr {
     @include sprite($rede-tumblr-branco);
   }
+  #portalredes-linkedin {
+    @include sprite($rede-linkedin-branco);
+  }
 }
