Corrige a formatação do menupara mais de 2 niveis

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -106,6 +106,14 @@ ul.submenu {
   position: relative;
   top: 25px;
 }
+ul.submenu ul.submenu {
+  left: 10px;
+  margin-bottom: 5px;
+}
+#main-navigation .submenu .submenu {
+  font-size: 70%;
+  margin-top: 16px;
+}
 
 /* apenas busca expandida */
 .expandable-header-template.section-pagina-inicial {
